项目功能调整优化

--- a/src/layouts/UserLayout.less
+++ b/src/layouts/UserLayout.less
@@ -5,7 +5,8 @@
   flex-direction: column;
   height: 100vh;
   overflow: auto;
-  background: @layout-body-background;
+  // background: @layout-body-background;
+  background:#1b3e73
 }
 
 .lang {
@@ -57,7 +58,8 @@
 .title {
   position: relative;
   top: 2px;
-  color: @heading-color;
+  //color: @heading-color;
+  color: #fff;
   font-weight: 600;
   font-size: 33px;
   font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
