修改抽屉自适应样式、流程简化、去掉车辆、司机维护和工单关联

--- a/src/pages/Common.less
+++ b/src/pages/Common.less
@@ -13,3 +13,10 @@
 .ant-drawer-body {
   padding: 10px !important;
 }
+
+// /*当屏幕尺寸小于800px时，应用下面的CSS样式*/
+// @media screen and (max-width: 800px) { 
+//   .ant-drawer-content-wrapper{
+//     width: 100% !important;
+//   }
+// }
